--- a/SCSS/modules/_header.scss
+++ b/SCSS/modules/_header.scss
@@ -9,7 +9,7 @@
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 70px 1fr;
+    grid-template-rows: 100px 1fr;
     justify-content: center;
     align-items: center;
     
